--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     
     <mi-componente></mi-componente>
 
-    <p>{{ title }} app is running by {{ guada }}</p>
+    <p>{{ title }} app is running by {{ guada }} !</p>
   </div>
 
 
